[gd_scene load_steps=5 format=2]

[ext_resource path="res://boss/boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://root.gd" type="Script" id=3]
[ext_resource path="res://utils/GameOver.tscn" type="PackedScene" id=4]

[node name="root" type="Node2D"]
script = ExtResource( 3 )

[node name="carrot" parent="." instance=ExtResource( 1 )]
position = Vector2( 484, 264 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 263, 410 )
scale = Vector2( 2, 2 )
speed = 400

[node name="GameOver" parent="." instance=ExtResource( 4 )]
position = Vector2( 489.994, 254.797 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 264.901, 408.576 )
[connection signal="player_killed" from="player" to="." method="_on_player_player_killed"]
[connection signal="restart" from="GameOver" to="." method="_on_GameOver_restart"]
